# lumo

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  skills.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  check_suggestion.yml  config.yml
.github/workflows/: ci.yml
assets/: demo.cast  demo.tape  record-demo.sh
data/: README.md
docs/design/: figma-render.md  snapshot-input.md  spec-check.md
docs/design/multi-file-resolution/: 01-project-index.md  02-name-resolution.md  03-inline-expansion.md  04-modifier-forwarding.md  05-tracing-walkthrough.md  README.md
docs/design/spec-check/: 01-inputs.md  02-algorithm.md  03-outputs.md  04-sources.md  05-honesty.md  06-testing.md  07-risks.md  08-phasing.md  README.md
examples/: README.md  lumo.config.json  parity_android.json  parity_ios.json  source_bad_compose.kt  source_bad_swiftui.swift  theory_bad_layout.json  theory_good_layout.json
installer/: LICENSE  README.md  package-lock.json  package.json
installer/scripts/: bundle-skill.js  release.sh
installer/src/: index.js
installer/src/commands/: doctor.js  init.js  uninstall.js
installer/src/lib/: clients.js  mcp.js  prompt.js  python.js  skill.js  style.js
skill/: SKILL.md
tools/: .coverage  README.md  pyproject.toml
tools/lumo/: __init__.py
tools/lumo/audit/: __init__.py  cli.py  core.py
tools/lumo/figma/: __init__.py  annotate.py  cli.py  core.py
tools/lumo/mcp/: __init__.py  server.py
tools/lumo/parity/: __init__.py  cli.py  core.py
tools/lumo/render/: __init__.py  cli.py  core.py
tools/lumo/source/: __init__.py  cli.py  core.py
tools/lumo/theory/: __init__.py  cli.py  core.py
tools/lumo/wcag/: __init__.py  cli.py  core.py
tools/tests/: test_audit.py  test_figma.py  test_mcp.py  test_parity.py  test_render.py  test_render_swiftui.py  test_source.py  test_source_swiftui.py  test_theory.py  test_wcag.py
