[project]
name = "lumo-tools"
version = "0.0.1"
description = "Lumo mobile design tools — invoked by the Lumo Claude Code skill"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Viktor Savchik" }]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
lumo-wcag = "lumo.wcag.cli:main"
lumo-theory = "lumo.theory.cli:main"
lumo-parity = "lumo.parity.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumo*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
