[project]
name = "lumo-mobile"
version = "0.0.3"
description = "Deterministic mobile UI/UX checks for Compose / SwiftUI / XML / UIKit — WCAG validator with OKLCH auto-correct, cross-platform parity diff, cognitive-science (Fitts / Hick / Gestalt) layout checks. Ships with an MCP server."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Viktor Savchik" }]
keywords = [
    "mobile", "design", "ui", "ux", "wcag", "accessibility",
    "jetpack-compose", "swiftui", "uikit", "android", "ios",
    "fitts", "gestalt", "design-system", "cross-platform", "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "numpy>=1.26",
    "mcp>=1.27",
    "tree-sitter>=0.23",
    "tree-sitter-kotlin>=1.1",
]

[project.urls]
Homepage = "https://github.com/OneXeor-Dev/lumo"
Repository = "https://github.com/OneXeor-Dev/lumo"
Issues = "https://github.com/OneXeor-Dev/lumo/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
lumo-wcag = "lumo.wcag.cli:main"
lumo-theory = "lumo.theory.cli:main"
lumo-parity = "lumo.parity.cli:main"
lumo-source = "lumo.source.cli:main"
lumo-mcp = "lumo.mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lumo*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
